syntax = "proto3";

package unaryService;


option go_package = "github.com/jdk829355/go_fssn/unary/unaryService";

service UnaryService{
    rpc MyFunction(MyNumber) returns (MyNumber) {}
}

message MyNumber{
    int32 value = 1;
}